--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,50 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+
+# from https://github.com/jwgrenning/cpputest-starter-project
+.DS_Store
+*.swp
+*.*~
+.*~
+*.d
+*.o
+*.a
+.settings
+*doxygen*
+*.gcov
+*.gcno
+*.gcda
+*_tests
+*_cslim
+*a.out
+*.zip
+tmp
+pdfs
+*.map
+gcov
+objs
+lib
+*_tests.txt
+gcov*.html
+ErrorLogs
+testResults
+.metadata
+Debug
+*/Debug/*
+*.exe
+*.obj
+*.ncb
+*.opt
+*.plg
+*.idb
+*.pdb
+*.sou
+*.sdf
+*.lib
+*.log
+*.tlog
+*.cache
+*.user
+*.sublime-*
