--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .metadata/
+RemoteSystemsTempFiles/
 
 # other useful ignores from https://github.com/github/gitignore/blob/master/C.gitignore
 # Prerequisites
@@ -53,3 +54,16 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+Debug/
+Release/
+CMSIS/
+startup/
+StdPeriph_Driver/
+LinkerScript.ld
+.cproject
+.project
+.settings/
+*.cfg
+*.swp
+
